build/k8s/http/staging/http-api.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: api
  namespace: [NAMESPACE]
spec:
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: 887044485231.dkr.ecr.eu-west-1.amazonaws.com/api_staging:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "512Mi"
              cpu: "1"
            limits:
              memory: "2000Mi"
              cpu: "2"
---
kind: Service
apiVersion: v1
metadata:
  name: api-service
  namespace: [NAMESPACE]
spec:
  selector:
    app: api
  type: ClusterIP
  ports:
    - name: node
      port: 80
      targetPort: 8081
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/backend-protocol: "http"
    nginx.ingress.kubernetes.io/enable-cors: "flase"
  name: api-ingress
  namespace: [NAMESPACE]
  labels:
    app: "api"
spec:
  rules:
    - host: [DOMAIN]
      http:
        paths:
          - backend:
              serviceName: api-service
              servicePort: 80
